monticore-generator/src/test/resources/cocos/invalid/A4025/A4025_super_g.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4025;

grammar A4025_super_g {

 A = c:"b";

}
